--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
+<section id="page">
 <body>
-  Instagram
+<div class="container">
+  <div class="header">
+    <img src ="images/brand.png" alt="brandPNG">
+    <button class="button"> 
+      <img src ="images/home.png" alt="homePNG" width="40xp"><span class="logIn">Log In</span>
+    </button>
+  </div>
+  <div class="content">
+    <h2>Capture and Share the World's Moments</h2> 
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Capture and Share the World's Moments
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <p>Oh yeah, did we mention it's free?</p>
+  <div class="footer1">
+      <img src= "images/badge-android.png" alt="badgeAndroidPNG">
+      <img src= "images/badge-iphone.png" alt="badgeIphonePNG">  
+  </div>
+  </div>
+</div>
+<div class="footer2">
+    <a href="#">ABOUT US</a>
+    <a href="#">SUPPORT</a>
+    <a href="#">BLOG</a>
+    <a href="#">PRESS</a>
+    <a href="#">API</a>
+    <a href="#">JOBS</a>
+    <a href="#">PRIVACY</a>
+    <a href="#">TERMS</a>
+   &copy; 2014 Instagram
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="leftSide">
+    <img src="images/phones.png" alt="iphonesPNG">
+  </div>
 </body>
+</section>
 </html>
