--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href="css/main.css">
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<section id="page">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="left">
+      <img src="images/phones.png">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="right">
 
-  Oh yeah, did we mention it's free?
+    <div class="header">
+      <img src="images/brand.png">
+      <button>Log In <img src="images/home.png"></button>
+    </div>
+    <div class="frame">
+      <div class="content">
+          <h1>  Capture and Share the World's Moments </h1>
+          <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family. 
+              <br> <br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            
+             <br>  <br>  </b> Oh yeah, did we mention it's free? </p>
+      </div>
+    </div>
+    <div class="store">
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+    </div>
+    <div class="clearfix"></div>
+  
+  </div>  
 
-  Download on the App Store
-  Get it on Google Play
+  
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+  
+
+  
+
+  
+
+
+
+</>
+
 </body>
 </html>
