--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<body class="body main">
+  <div>
+    <div class="left-bar">
+      <img src="images/phones.png"/>
+    </div>
+    <div class="right-bar">
+      <div><!-- 2 top images -->
+        <div class="left-pic">
+          <img src="images/brand.png"/>
+        </div> 
+          <div class="right-pic">
+            <div class="home">
+              <img src="images/home.png" class="moveDown"/>
+              <span class="white"> Log in</span>
+            </div>
+          </div> 
+      </div>
+      <div class="clear whiteBG"><!-- text: 3 paragraphs -->
+        <h1 class="dark-blue">Capture and Share the World's Moments</h1>
+        <p> 
+          Instagram is a <span class="bold">fast, beautiful</span> and <span class="bold">fun</span> way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.        
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+      </div>
+      <div><!-- app stores: 2 images -->
+        <img src="images/badge-iphone.png" />
+        <img src="images/badge-android.png" />
+      </div>
+    </div>
+  </div>
+  <footer class="clear footer">  
+  <span class="lightBlueText">
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+    </span>
+    <span class="grey">
+   &copy; 2014 Instagram 
+   </span>
+  </footer>
 </body>
 </html>
