--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section class="page">
+    <div class = "left">
+      <img src="images/phones.png">
+    </div>
+  
+    <div class = "right">
+      <div class = "header"> 
+        <img src="images/brand.png" alt="logo">
+        
+        <button class="link-btn">
+          <img src="images/home.png"><b>Log In</b>
+        </button>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class = "content">
+        <h1>Capture and Share the World's Moments</h1>
+         <p> Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. 
+        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <div class = "store">
+        <img src="images/badge-iphone.png" alt="Download on the App Store" class="downloadImg">
+        <img src="images/badge-android.png" alt"Get it on Google Play" class="downloadImg">
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li><strong>About us</strong></li>
+        <li><strong>Support</strong></li>
+        <li><strong>Blog</strong></li>
+        <li><strong>Press</strong></li>
+        <li><strong>API</strong></li>
+        <li><strong>Jobs</strong></li>
+        <li><strong>Privacy</strong></li>
+        <li><strong>Terms</strong></li>
+        <li class="instaGrey"><strong>&copy; 2014 Instagram</strong></li>
+      </ul>
+    </footer>
+  </section>
 </body>
 </html>
