BER - Elliot - Button Problems

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div>
+    <img src="images/phones.png" alt="phones">
+  </div>
+      <img class="brand" src="images/brand.png" alt="brand">
+      <button class="button">
+      <img class="home" src="images/home.png" alt="home">
+      <p class="login">Log in</p>
+      </button>
+  <section>
+    <div>
+  <h1>Capture and Share <br>the World's Moments</h1>
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends
+  and family.</p>
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+  that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+  <p>Oh yeah, did we mention
+  it's free?</p> 
+  </p>
+    <img class="badge" src="images/badge-iphone.png" alt="badge-iphone">
+    <img class="badge" src="images/badge-android.png" alt="badge-android">
+  </div>
+</section>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      </ul>
+      <p>&copy; 2014 Instagram</p>
+      </footer>
 </body>
+
 </html>
