--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,40 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="blue-area"></div>
+  <div class="content-wrapper">
+    <img style="float: left;" src="images/phones.png" alt="Phones">
+    <div class="main-content">
+      <div class="title">
+        <img src="images/brand.png" alt="Brand">
+        <p class="login"><img style="position: relative; left: -3px; top: 3px;" src="images/home.png" alt="Brand">Log in</p>
+      </div>
+      <div class="main-text">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png" alt="Download on the App Store"><img src="images/badge-android.png" alt="Get it on Google Play">
+      </div>
+    </div>
+    <div class="footer">
+      <table>
+        <tr>
+          <td><p>ABOUT US</p></td>
+          <td><p>SUPPORT</p></td>
+          <td><p>BLOG</p></td>
+          <td><p>PRESS</p></td>
+          <td><p>API</p></td>
+          <td><p>JOBS</p></td>
+          <td><p>PRIVACY</p></td>
+          <td><p>TERMS</p></td>
+          <td>&copy; 2014 Instagram</td>
+        </tr>
+      </table>
+    </div>
+  </div>
 </body>
 </html>
