--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="backgroundBlue"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="backgroundWhite"></div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<img src="images/phones.png" class="phone">
 
-  Oh yeah, did we mention it's free?
+<img src="images/brand.png" class="brand">
 
-  Download on the App Store
-  Get it on Google Play
+<img src="images/frame.png" class="frame">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<div class="texte">
+    <h2>Capture and Share<br>
+       the World's Moments</h2>
 
-  &copy; 2014 Instagram
+    <p>
+      Instagram is a
+      <b>fast</b>,
+      <b>beautiful and fun</b> way to share your life with friends and family.<br><br> Take a picture or video, choose a filter to transform
+      its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and
+      more. It's a new way to see the world.<br><br> Oh yeah, did we mention it's free?
+    </p>
+
+
+
+    <img src="images/badge-android.png" class="android">
+
+    <img src="images/badge-iphone.png" class="iphone">
+
+</div>
+
+  <img src="images/bgtile.png">
+
+  <div class="footer">
+    About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+  </div>
+
 </body>
+
 </html>
