instagram clone done

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <header class="header">
+    <section>
+    <div class="logo headerlogo">
+      <img src="images/brand.png" alt="appareil photo">
+    </div>
+    <div class="login headerlogo"><img src="images/home.png" alt="home"> <a href="#">Log in</a>
+    </div>
+  </section>
+    <!--div class="logo"><img src="images/brand.png" alt="appareil photo">
+      <img src="images/home.png" alt="home">Log in</div-->
 
-  Capture and Share the World's Moments
+  </header>
+  <aside class="phoneimg">
+    <img src="images/phones.png" alt="smartphone">
+  </aside>
+  <section class="text">
+    <h2>Capture and Share the World's Moments</h2>
+    <article class="text1">
+      Instagram is a
+      <strong>fast, beautiful and fun </strong> way to share your life with friends and family. Take a picture or video, choose a
+      filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+      Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free?
+    </article>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <article class="text2">
+      <div class="badge-iphone dimensionimg">
+        <!--img src="badge-iphone.png" alt="badge-iphone.png"-->
+      </div>
+      <div class="badge-android dimensionimg">
+        <!--img src="badge-android.png" alt="badge-android"-->
+      </div>
+    </article>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </section>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer class="footer">
+    <ul class="footer-bar">
+      <li class="footer-bar-li"><a href="#">About Us</a></li>
+      <li class="footer-bar-li"><a href="#">Support</a></li>
+      <li class="footer-bar-li"><a href="#">Blog</a></li>
+      <li class="footer-bar-li"><a href="#">Press</a></li>
+      <li class="footer-bar-li"><a href="#">API</a></li>
+      <li class="footer-bar-li"><a href="#">Jobs</a></li>
+      <li class="footer-bar-li"><a href="#">Privacy</a></li>
+      <li class="footer-bar-li"><a href="#">Terms</a></li>
+      <li class="footer-bar-li lastli">&copy;2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
