--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="blue-background">
+    <div>
+      <img src="images/brand.png" class="brand">
+      <button type="button" class="bouton"><img src="images/home.png" class="home"><p class="home-button">Log In</p></button>
+    </div>
+    <img src="images/phones.png" class="phone">
+  </div>
+  <div class="box">
+    <img src="images/frame.png">
+    <h1>Capture and Share the World's Moments</h1>
+    <p class="inside-box">Instagram is a
+      <strong>fast, beautiful</strong> and
+      <strong>fun</strong> way to share your life with friends and family.</p>
+    <p class="inside-box">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+      You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Capture and Share the World's Moments
+    <p class="inside-box">Oh yeah, did we mention it's free?</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <img src="images/badge-android.png" class="badge badge1">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <img src="images/badge-iphone.png" class="badge badge2">
+  </div>
+  <div class="before-footer">
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>
+  <footer>
+    <nav>
+      <a href="#" class="nav-link">About Us</a>
+      <a href="#" class="nav-link">Support</a>
+      <a href="#" class="nav-link">Blog</a>
+      <a href="#" class="nav-link">Press</a>
+      <a href="#" class="nav-link">API</a>
+      <a href="#" class="nav-link">Jobs</a>
+      <a href="#" class="nav-link">Privacy</a>
+      <a href="#" class="nav-link">Terms</a>
+      <a href="#" class="nav-link">&copy; 2014 Instagram</a>
+    </nav>
+  </footer>
 </body>
+
 </html>
