--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,81 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  <header>
 
-  Download on the App Store
-  Get it on Google Play
+  </header>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div class="background1">
 
-  &copy; 2014 Instagram
+  </div>
+
+
+  <div class="content-insta">
+
+    <div class="phones" >
+      <img src="./images/phones.png" alt="phones">
+    </div>
+
+    <div class="presentation">
+
+      <div class="description-logo">
+          <img src="./images/brand.png" alt="insta logo">
+
+          <img src="./images/home.png" alt="login icon">
+
+      </div>
+      <div class="article-insta">
+
+        <div>
+          <h1 class="description-h1">Capture and Share the World's Moments</h1>
+
+          <section>
+            <article>
+            Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        
+            Oh yeah, did we mention it's free?
+            </article>
+          </section>
+        </div>
+
+
+        <div>
+          <section class="app-telechargement">
+<!--           Download on the App Store -->
+          <img src="./images/badge-android.png" alt="badge android">
+
+<!--           Get it on Google Play -->
+          <img src="./images/badge-iphone.png" alt="badge iphone">
+          </section>
+        </div>
+        </div>
+    </div>
+
+  </div>
+
+  <footer class="footer.nav">
+          <ul>
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Blog
+            <li>Press</li>
+            <li>API
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li></li>
+          </ul>
+       <p>&copy; 2014 Instagram</p> 
+  </footer>
+
 </body>
 </html>
