--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+<!--CONTENT START-->
+    <div class="content-container">
+      <!--CONTENT:IMAGE-->
+        <div class="image-container">
+            <img src="./images/phones.png" alt="phone pic">
+        </div>
+      <!--CONTENT:INFO-->
+      <div class="info-container">
+        <div class="header-container">
+          <div class="header-img"><img src="./images/brand.png" alt="logo"></div>
+          <div class="header-button">
+              <button id="button">
+                  <img src="images/home.png" alt="home">
+                  Log in
+                </button></div>
 
-  Capture and Share the World's Moments
+        </div>
+        <div class="text-container">
+          <div class="text">
+            <h2 style="color:#0A3358">Capture and Share <br>the World's Moments</h2>
+            <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+              <br>
+              <br>
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <br>
+              <br>
+                Oh yeah, did we mention it's free?</p>
+                <br>
+                <img class="text-img" id="iphone" src="images/badge-iphone.png" alt="iphone">
+                <img class="text-img" id="android" src="images/badge-android.png" alt="android">
+          </div>
+        </div>
+      </div>
+    </div>
+<!--CONTENT END-->
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<!--FOOTER-->
+    <div class="footer-container">
+      <ul>
+        <li class="footer-elements">About Us</li>
+        <li class="footer-elements">Support</li>
+        <li class="footer-elements">Blog</li>
+        <li class="footer-elements">Press</li>
+        <li class="footer-elements">API</li>
+        <li class="footer-elements">Jobs</li>
+        <li class="footer-elements">Privacy</li>
+        <li class="footer-elements">Terms</li>
+        <li id="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </div>
 </body>
 </html>
