--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="content">
+    <div class="col">
+    <img src="images/phones.png" alt="phones image">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="instagram col">
+      <div class="instaccueil">
+        <img src="images/brand.png" alt="Instagram logo">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <button>
+          <img src="images/home.png" alt="home logo">
+          <a href="#0" class="login">Log In</a>
+        </button>
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div class="description text">
+        <h1 class="text">Capture and Share the World's Moments</h1>
 
-  Download on the App Store
-  Get it on Google Play
+        <p class="text">
+          Instagram is a <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share your life with friends and family.<br>
+        </p>
+        <p class="text">
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+        </p>
+        <p class="text">
+          Oh yeah, did we mention it's free?
+        </p>
+        <img class="text" src="images/badge-iphone.png" alt="Download on the App Store">
+        <img class="imgspace" src="images/badge-android.png" alt="Get it on Google Play">
+      </div>
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+    <div class="about-us clearfix">
+      <ul class="links">
+        <li><a href="#0">About Us</a></li>
+        <li><a href="#0">Support</a></li>
+        <li><a href="#0">Blog</a></li>
+        <li><a href="#0">Press</a></li>
+        <li><a href="#0">API</a></li>
+        <li><a href="#0">Jobs</a></li>
+        <li><a href="#0">Privacy</a></li>
+        <li><a href="#0">Terms</a></li>
+
+      <span class="instaright">&copy; 2014 Instagram</span>
+    </div>
+  </div>
 </body>
 </html>
