--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section class="flex">
+    <header class="logo">
+      <h1><img src="./images/brand.png" alt="instagram"></h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <button><img src="./images/home.png" alt="home"> Log in</button>
+    </header>
 
-  Oh yeah, did we mention it's free?
+  <section class="content">
+    <div class="text">
+      <h2>Capture and Share the World's Moments</h2>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  &copy; 2014 Instagram
+      <p>Oh yeah, did we mention it's free?</p>
+
+      <img src="./images/badge-iphone.png" alt="apple store">
+      <img src="./images/badge-android.png" alt="google store">
+    </div>
+  </section>
+</section>
+
+<div class="phones">
+  <img src="./images/phones.png" alt="phones">
+</div>
+</div>
+
+
+<footer class="nav-bottom">
+  <ul>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Support</li></a>
+    <li><a href="#">Blog</li></a>
+    <li><a href="#">Press</li></a>
+    <li><a href="#">API</li></a>
+    <li><a href="#">Jobs</li></a>
+    <li><a href="#">Privacy</li></a>
+    <li><a href="#">Terms</li></a>
+    <li> &copy; 2014 Instagram</li>
+  </ul>
+</footer>
+
+
+</div>
 </body>
 </html>
