--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class = "content">
+    <div class = "phones-float-left">
+            <img src="images/phones.png" alt="phones-image">
+    </div>
+    <div class="content-float-right">
+        <div class="header">
+            <img src="images/brand.png" alt="logo">
+           <button> <img src="images/home.png" alt="home"> Log in </button>
+       </div>
+          <div class="capture-and-share">
+              <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+              <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+              <button><img src="images/badge-iphone.png" alt= "app-store"> </button>
+              <button><img src="images/badge-android.png" alt= "google-play"></button>
+          </div>
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+<div class= list of links>
+    <ul>
+        <li>About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+          </ul>
+          &copy; 2014 Instagram
+</div>
+
+
 </body>
 </html>
