--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
+    <img class="bgtile" src="images/bgtile.png" alt="bgtile"/>
+  </header>
 
-  Capture and Share the World's Moments
+  <section>
+    <div class= "leftBar">
+      <img src="images/phones.png" alt="phones"/>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class= "rightBar">
+      <div class= "brandBar">
+        <img src="./images/brand.png" alt="Instagram"/>
+        <button>
+          <img src="images/home.png" alt="home"/>
+            Log in
+        </button>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="textCadre">
+        <div class="paragraph">
+          <h1>
+            <p class="space">Capture and Share</p>
+            <p class="space">the World's Moments</p></h1>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
 
-  Oh yeah, did we mention it's free?
+        <div class="download">
+          <img src="./images/badge-iphone.png" alt="Download on the App Store"/>
+          <img src="./images/badge-android.png" alt="Get it on Google Play"/>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <ul class="flexContainer">
+      <li><a href="#" class= "link"></a>About Us</a></li>
+      <li><a href="#" class= "link"></a>Support</a></li>
+      <li><a href="#" class= "link"></a>Blog</a></li>
+      <li><a href="#" class= "link"></a>Press</a></li>
+      <li><a href="#" class= "link"></a>API</a></li>
+      <li><a href="#" class= "link"></a>Jobs</a></li>
+      <li><a href="#" class= "link"></a>Privacy</a></li>
+      <li><a href="#" class= "link"></a>Terms</a></li>
+      <li><span>  &copy; 2014 Instagram</span></li>
+    </ul>
+  </footer>
 </body>
 </html>
