--- a/starter-code/instagram.html
+++ b/starter-code/instagram.html
@@ -9,7 +9,8 @@
     <nav class="nav">
         <div class="container">
             <img class="flex-item1"  src ="images/brand.png" alt="Instagram">      
-            <img class="flex-item2"  src= "images/home.png" alt="login">        
+            <img class="flex-item2"  src= "images/home.png" alt="login"> 
+            <!-- <p>Log In</p>        -->
            
         </div>
         <div class="phone">
