added style changes

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,18 +14,23 @@
 
   <div class="container">
       <img src="./images/brand.png" alt="instagram" class="insta">
-  <h2>Capture and Share the World's Moments</h2>
+     <button class="login"><img src="./images/home.png" class="loginImg"><b>Log In</b></button>
+  <h2>Capture and Share <br>the World's Moments</h2>
 
-  <h3>Instagram is a fast, beautiful and fun way to share your life with friends and family.</h3>
+  <h3>Instagram is a fast, beautiful and fun way to share your life <br> with friends and family.</h3>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+  Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.
+<br>
   Oh yeah, did we mention it's free?
 <br>
-  <button>
+<br>
+<br>
+<br>
+
+ 
       <img src="./images/badge-iphone.png">
       <img src="./images/badge-android.png">
-      </button>
+      
 
   </div>
 
