--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,6 +4,7 @@
   <title>Instagram</title>
 </head>
 <body>
+  <div class="fondo-azul"></div>
   Instagram
 
   Capture and Share the World's Moments
