--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,31 +2,39 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  <div class="fondo-azul"></div>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="box">
+    <div class="mobile-image">
+      <image src="./images/phones.png" alt="phones"></image>
+    </div>
+    <div class="logo-block">
+      <div class="brand-login">
+        <image class="logo" alt="Instagram" src="./images/brand.png"></image>
+        <a href="#" class="login"></a>
+      </div>
+      <h1 class="title">Capture and Share the World's Moments</h1>
+      <p class="paragraph">Instagram is a fast, beautiful and fun way to share your life with 
+        friends and family. Take a picture or video, choose a filter to transform its look 
+        and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+        Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free?</p>
+      <div class="store-logos">
+        <image class="apple-logo" src="./images/badge-iphone.png" alt="Download on the App Store"></image>
+        <image class="android-logo" src="./images/badge-android.png" alt="Get it on Google Play"></image>
+      </div>
+    </div>
+  </div>
+<footer>
+  <a href="#" class="footer-item">About Us</a>
+  <a href="#" class="footer-item">Support</a>
+  <a href="#" class="footer-item">Blog</a>
+  <a href="#" class="footer-item">Press</a>
+  <a href="#" class="footer-item">API</a>
+  <a href="#" class="footer-item">Jobs</a>
+  <a href="#" class="footer-item">Privacy</a>
+  <a href="#" class="footer-item">Terms</a>
+  <span href="" class="footer-item">&copy; 2014 Instagram</span>
+</footer>
 </body>
 </html>
