--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,9 +11,13 @@
     </div>
     <div class="right-block">
       <img src="images/brand.png" alt="Instagram logo">
+      <button class="login-btn">
+        <img src="images/home.png" alt="Home icon">
+        Log in
+      </button>
       <div class="white-box">
         <h1>Capture and Share the World's Moments</h1>
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
         <div class="download-buttons">
@@ -26,9 +30,11 @@
         </div>
       </div>
     </div>
+    <div class="clearfix"></div>
   </section>
+
   <footer>
-    <ul>
+    <ul class="footer-links">
       <li>About Us</li>
       <li>Support</li>
       <li>Blog</li>
