--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,40 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div class="header"></div>
+  <section class="content">
+    <div class="col-1">
+      <img src="images/phones.png">
+    </div>
+    <div class="col-2">
+      <img src="images/brand.png">
+      <div id="content-text">
+      <h1>Capture and Share the World's Moments</h1>
+      
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br><br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+        Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png">
+        <img src="images/badge-android.png">
+      </div>
+    </div>
+   
+  </section>
+  <div class="clearfix"></div>
+  <section id=links>
+      <a href="">About Us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href="">API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a>
 
   &copy; 2014 Instagram
+  </section>
 </body>
 </html>
