--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="flex-container">
+      <div class="container">
+          <div class="left-column">
+            <img src="images/phones.png" alt="">
+          </div>
+          <div class="right-column">
+            <div class="top-content">
+              <img src="images/brand.png" alt="">
+              <div class="log-in">
+                <div class="login-text">Log In</div>
+              </div>
+            </div>
+            <div class="bottom-content">
+              <h1>Capture and Share the World's Moments</h1>
+              <p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+              </p>
+              <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              </p>
+              <p>  Oh yeah, did we mention it's free?
+              </p>
+              <div class="download-wrapper">
+                <img src="images/badge-iphone.png" alt="">
+                <img src="images/badge-android.png" alt="">
+              </div>
+            </div>
+          </div>  
+        </div>
+  </div>
+  
+<footer>
+  <ul>
+    <li>About us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>Api</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li class="copyright">&copy; 2014 Instagram</li>
+  </ul>
+</footer>
 </body>
 </html>
