Start the daily exercise

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
-  Instagram
+  <div class="content">
+    <div class="phone">
+      <img src="images/phones.png" alt="Mobile App" class="phoneImage">
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="presentation">
+      <img src="images/brand.png" alt="Instagram" class="logoImage">
+      <div class="loginBtn">
+        <img src="images/home.png" alt="Home" class="homeImage">
+        Log in
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    Capture and Share the World's Moments
 
-  Oh yeah, did we mention it's free?
+    Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Download on the App Store
-  Get it on Google Play
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    Oh yeah, did we mention it's free?
 
-  &copy; 2014 Instagram
+      <img src="images/badge-iphone.png" alt="Download on the App Store" class="badge" id="appStore">
+      <img src="images/badge-android.png" alt="Get it on Google Play" class="badge" id="playStore">
+
+    </div>
+    <div class="footer">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+  </div>
 </body>
 </html>
