--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <section class="main">
+  <section class="main container">
     <div class="left-block">
       <img src="images/phones.png" alt="Phone image">
     </div>
@@ -33,17 +33,33 @@
     <div class="clearfix"></div>
   </section>
 
-  <footer>
+  <footer class="container">
     <ul class="footer-links">
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
-      <li class="copy">&copy; 2014 Instagram</li>
+      <li>
+        <a href="#">About Us</a>
+      </li>
+      <li>
+        <a href="#">Support</a>
+      </li>
+      <li>
+        <a href="#">Blog</a>
+      </li>
+      <li>
+        <a href="#">Press</a>
+      </li>
+      <li>
+        <a href="#">API</a>
+      </li>
+      <li>
+        <a href="#">Jobs</a>
+      </li>
+      <li>
+        <a href="#">Privacy</a>
+      </li>
+      <li>
+        <a href="#">Terms</a>
+      </li>
+      <li>&copy; 2014 Instagram</li>
     </ul>
   </footer>  
 </body>
