--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
 </head>
+<link rel="stylesheet" type="text/css" href="css/main.css">
+
 <body>
-  Instagram
+  <div class="bloque_general">
+    <div class="imagen_telefono">
+      <img src="images/phones.png">
+    </div>
+    <div class="bloque2">
+      <img src="images/brand.png">
+      <a class=link-btn href="#"><img src="images/home.png" class="imagen-home">Log in</a>
+      <div class="bloque2-1">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>
 
-  Capture and Share the World's Moments
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <br></br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br></br>Oh yeah, did we mention it's free?
+        </p>
+      </div>
+      <div class="imagen_mac">
+        <img src="images/badge-iphone.png">
+      </div>
+      <div class="imagen_android">
+        <img src="images/badge-android.png"> </div>
+    </div>
+  </div>
+  <footer class="support">
+    <ul class= "lista">
+      <li class="ele_lista">About Us</li>
+      <li class="ele_lista">Support Blog</li>
+      <li class="ele_lista">Press</li>
+      <li class="ele_lista">API</li>
+      <li class="ele_lista"> Jobs</li>
+      <li class="ele_lista"> Privacy</li>
+      <li class="ele_lista"> Terms</li>
+      <li class="ele_no_lista">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+
 </html>
