--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,7 +9,7 @@
   <section class="content">
     <div class="col-1"><img src="images/phones.png"></div>
     <div class="col-2">
-      <div id="logo"><img src="images/brand.png">
+      <div id="logo"><img class="logo-image" src="images/brand.png">
         <button><img class ="button-image" src= "images/home.png"> Log in</button>
       </div>
       <div id="content-text">
