pagina insta terminada

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+
 </head>
-<body>
-  Instagram
+<body class="fondoAzul">
+    
+<main class="cuerpo">  
+  <div class= "iphoneContainer"><img class= "iphone" src="../starter-code/images/phones.png" alt="iphone"></div>
+  
+  <div class= "texto">
+    <div class="logoInsta"><img class="logoInstaImg" src="../starter-code/images/brand.png" alt="instagram logo"><button class="login"><img src="../starter-code/images/home.png" alt="">Log In</button></div>
+  <div class="fondoBlanco">
 
-  Capture and Share the World's Moments
+  <h1>Capture and Share<br> the World's Moments</h1>
 
+  <p class="fondoBlancoTexto">
+
+  
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <br><br>
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <br><br>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+  Oh yeah, did we mention it's free?</p>
+</div>
+<div class="logos"><img class="appstore" src="../starter-code/images/badge-iphone.png" alt="app store"><img src="../starter-code/images/badge-android.png" alt="google play"></div>
+</div>
+</main>
+<footer class= "info">
   About Us
   Support
   Blog
@@ -24,8 +39,12 @@
   API
   Jobs
   Privacy
-  Terms
-
+  Terms 
   &copy; 2014 Instagram
+</footer>  
+
+
+
+ 
 </body>
 </html>
