--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,7 +14,7 @@
       </div>
       <div id="content-text">
       <h1>Capture and Share <br>the World's Moments</h1>
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>Oh yeah, did we mention it's free?</p>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>Oh yeah, did we mention it's free?</p>
         <img src="images/badge-iphone.png">
         <img src="images/badge-android.png">
       </div>
@@ -23,14 +23,14 @@
   </section>
   <div class="clearfix"></div>
   <section id="links">
-      <a href="">About Us </a>
-      <a href=""> Support </a>
-      <a href=""> Blog </a>
-      <a href=""> Press </a>
-      <a href=""> API </a>
-      <a href=""> Jobs </a>
-      <a href="">Privacy </a>
-      <a href=""> Terms</a>
+      <a href="">About Us&nbsp</a>
+      <a href="">Support&nbsp</a>
+      <a href="">Blog&nbsp</a>
+      <a href="">Press&nbsp</a>
+      <a href="">API&nbsp</a>
+      <a href="">Jobs&nbsp</a>
+      <a href="">Privacy&nbsp</a>
+      <a href="">Terms&nbsp</a>
     <spam>&copy; 2014 Instagram</spam>
   </section>
 </body>
