--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,36 +6,41 @@
 </head>
 <body>
   <div class="content">
-    <img src="images/phones.png" class="content_img">
-
-    </div>
+    <img src="images/phones.png" class="content_img" alt="iphone image">
     <div class="content_info">
-      <img class="logo" src="images/brand.png" alt="Instagram">
-
-      <h1>Capture and Share the World's Moments</h1>
-
-      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
-
-      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-
-      <p>Oh yeah, did we mention it's free?</p>
-
-      Download on the App Store
-      Get it on Google Play
+      <div class="brand">
+        <img class="logo" src="images/brand.png" alt="Instagram">
+        <button class="log-in_btn">
+          <img src="images/home.png" alt="log in icon">
+          <p>Log in</p>
+        </button>
+      </div>
+      <div class="content_info_frame">
+        <div class="content_info_text">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <img src="images/badge-iphone.png" alt="Download on the App Store">
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+        </div>
+      </div>
     </div>
   </div>
   <footer>
-    <ul>
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
-    </ul>
-    &copy; 2014 Instagram
+    <div class="center">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="copy">&copy; 2014 Instagram</li>
+      </ul>
+    </div>
   </footer>
 </body>
 </html>
