--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,6 +12,7 @@
     <div class="box">
       <div class="logo">
         <img src="./images/brand.png" alt="Logo">
+        <button>Log in</button>
       </div>
       
       <div class="content">
