BCN Sebastian Bjers Done

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,57 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-  Instagram
+  
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<header>
+    <div class="phones">
+        <img src="./images/phones.png">
+        </div>
+  <div class="logo-description">
+  <div class="logo">
+<img src="./images/brand.png" class="brand-logo">
+<img src="./images/home.png" class="home">
+</div>
+
+<div class="frame-instructions">
+<div class="sales-pitch">
+
+    
+  <h1>Capture and Share the World's Moments</h1>
+
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+</div>
 
+<div class="store-logos">
+  <img src="./images/badge-iphone.png" class="iphone-logo">
+  <img src="./images/badge-android.png" class="android-logo">
+
+</div>
+</div>
+
+
+
+
+</header>
+
+<body>
+
+</body>
+
+
+<footer>
   About Us
   Support
   Blog
@@ -27,5 +62,7 @@
   Terms
 
   &copy; 2014 Instagram
+</footer>
+
 </body>
 </html>
