--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="wrapper">
+    <div class="col">
+      <img src="./images/phones.png" alt="phones">
+    </div>
+    <div class="col col-2">
+      <div class="brand">
+        <img src="./images/brand.png" alt="instagram-logo">
+        <button class="log-in" type="submit" href="#">
+          <img src="./images/home.png" alt="home">
+          <p>Log in</p>
+        </button>
+      </div>
 
-  Capture and Share the World's Moments
+      <div class="text">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        
+        <img src="./images/badge-iphone.png" alt="iphone-download">
+        <img src="./images/badge-android.png" alt="android-download">
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<footer>
+  <ul>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Support</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Press</a></li>
+    <li><a href="#">API</a></li>
+    <li><a href="#">Jobs</a></li>
+    <li><a href="#">Privacy</a></li>
+    <li><a href="#">Terms</a></li>
+  </ul>
+  <div class="copy">&copy; 2014 Instagram</div>
+</footer>
 </body>
 </html>
