--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+<header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+</header>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div class="right-side">
+<div id="mobile-img">
+  <img src="images/phones.png" alt="mobile-img"/>
+</div>
 
-  Oh yeah, did we mention it's free?
+<div id="logo">
+  <img src="images/brand.png" alt="Instagram-logo"/>
+  <button image="images/home.png">Log in</button>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+  <div id="download-box">
+  <h2>Capture and Share the World's Moments</h2>
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b>, and <b>fun</b> way to share your life with friends and family.<br><br>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    Take a picture or a video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, and more. It's a new way to see the world.<br><br> 
 
-  &copy; 2014 Instagram
-</body>
-</html>
+    Oh yeah, did we mention it's free?<br><br>
+  </p>
+
+  <img src="images/badge-iphone.png" alt="Iphone"> <img src="images/badge-android.png" alt="Android">
+
+  </div>
+</div>
+<footer>
+  <nav>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+    </ul>
+  </nav>
+</footer>
