--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,60 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="main">
+    <div class="top">
+      <div class="column-left">
+        <img src="images/phones.png">
+      </div>
+      <div class="column-right">
+        <nav>
+          <img src="images/brand.png" width="270px">
+          <button class="log-in-button" type="button">
+            <a class="log-in-text" href="#">          
+              <img src="images/home.png">
+              Log in
+            </a>
+          </button>
+        </nav>
+        <article>
+          <div class="heading">
+            <h1>
+            Capture and Share the World's Moments
+            </h1>
+          </div>
+          <p>
+          Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.
+          </p>
+          <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+          Oh yeah, did we mention it's free?
+          </p>
+          <a href="#"><img src="images/badge-iphone.png"></a>
+          <a href="#"><img src="images/badge-android.png"></a>
+        </article>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <span class="copyright">&copy; 2014 Instagram</span>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
